fix collapse menu on mobile, fix font family

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
 /* Génréal */
 
 body{
@@ -202,7 +204,10 @@ nav > div > a.button-collapse > i:hover{
 
 .side-nav .collapsible-header{
 	margin: 0px;
-	padding-left: 30px;
+}
+
+.side-nav li:hover, .side-nav li.active{
+	background-color: #131313;
 }
 
 #mobile-demo > ul > li > div.collapsible-body > p > a:hover{
